--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -86,6 +86,9 @@
                     <a href="{{ url_for('main.index') }}" class="text-neutral-700 hover:text-black">
                         Головна
                     </a>
+                    <a href="{{ url_for('main.albums') }}" class="text-neutral-700 hover:text-black">
+                        Альбоми
+                    </a>
                     <a href="{{ url_for('main.about') }}" class="text-neutral-700 hover:text-black">
                         Про проєкт
                     </a>
